# krnl

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.rs  concept.md  deny.toml  krnl-cache.rs  wasm-tests.md
.cargo/: config.toml
.github/workflows/: ci.yaml
.krnl/: .gitignore  CACHEDIR.TAG  cache  cache.bincode
.krnl/modules/krnl/buffer/: kernels.bincode
.krnl/modules/src/buffer/: kernels.bincode
.krnl/modules/src/buffer.rs/: kernels.bincode
.krnl/modules/tests/integration_tests/: foo.bincode
.krnl/modules/tests/kernel_module.rs/: kernels.bincode
benches/compute-benches/: Cargo.toml  krnl-cache.rs
benches/compute-benches/benches/: benchmarks.rs
benches/compute-benches/shader-builder/shader/: Cargo.toml
benches/compute-benches/shader-builder/src/: main.rs
benches/compute-benches/src/: autograph_backend.rs  cuda_backend.rs  kernels.cu  krnl_backend.rs  lib.rs  ocl_backend.rs
benchmarks/compute-benchmarks/: Cargo.toml  build.rs  krnl-cache.rs
benchmarks/compute-benchmarks/.krnl/: cache  cache.bincode
benchmarks/compute-benchmarks/benches/: benchmarks.rs
benchmarks/compute-benchmarks/shader-builder/: Cargo.toml  rust-toolchain.toml  shader.spv
benchmarks/compute-benchmarks/shader-builder/shader/src/: lib.rs
benchmarks/compute-benchmarks/src/: autograph_backend.rs  cuda_backend.rs  krnl_backend.rs  lib.rs  ocl_backend.rs
crates/krnl/: Cargo.toml  krnl-cache.rs
crates/krnl-core/: Cargo.toml
crates/krnl-core/src/: arch.rs  buffer.rs  kernel.rs  lib.rs  mem.rs  scalar.rs
crates/krnl-macros/: Cargo.toml
crates/krnl-macros/src/: _lib.rs  lib.rs
crates/krnl/_src/: buffer.rs  kernel.rs  lib.rs
crates/krnl/_src/device/: engine.rs
crates/krnl/krnl-device-builder/: Cargo.toml  fill.spv  rust-toolchain.toml
crates/krnl/krnl-device-builder/krnl-device/: Cargo.toml
crates/krnl/krnl-device-builder/krnl-device/src/: lib.rs
crates/krnl/krnl-device-builder/src/: main.rs
crates/krnl/src/: _kernel_programming_guide.rs  buffer.rs  device.rs  lib.rs  main.rs
crates/krnl/src/device/: vulkan_engine.rs
crates/krnl/tests/: integration_tests.rs  wasm_integration_tests.rs
crates/krnlc/: Cargo.toml  build.rs  rust-toolchain.toml
crates/krnlc/src/: main.rs
crates/krnlc/tests/krnlc-test/: Cargo.toml  krnl-cache.rs
crates/krnlc/tests/krnlc-test/src/: lib.rs
docs/: publishing.md
krnl-builder/: Cargo.toml  rust-toolchain.toml
krnl-builder/examples/test-builder/: Cargo.toml
krnl-builder/examples/test-builder/src/: main.rs
krnl-builder/examples/test-builder/test-device/: Cargo.toml
krnl-builder/examples/test-builder/test-device/src/: lib.rs
krnl-builder/src/: lib.rs
krnl-core/: Cargo.toml
krnl-core/src/: __private.rs  buffer.rs  kernel.rs  lib.rs  mem.rs  ops.rs  scalar.rs  slice.rs
krnl-core/src/__private/: raw_module.rs
krnl-macros/: Cargo.toml
krnl-macros/builder/: Cargo.toml  rust-toolchain.toml
krnl-macros/builder/src/: main.rs
krnl-macros/examples/test-macros/: Cargo.toml
krnl-macros/examples/test-macros/.krnl/: CASHDIR.TAG  cache.bincode
krnl-macros/examples/test-macros/src/: lib.rs
krnl-macros/src/: build.rs  kernel_info.rs  lib.rs
krnl-types/: Cargo.toml  build.rs
krnl-types/src/: __private.rs  kernel.rs  lib.rs  scalar.rs  version.rs
krnl-types/src/__private/: raw_module.rs
krnlc/: Cargo.toml  build.rs  rust-toolchain.toml
krnlc/src/: main.rs
krnlc/tests/krnlc-test/: Cargo.toml  krnlc.cache
krnlc/tests/krnlc-test/src/: lib.rs
src/: _kernel_programming_guide.rs  buffer.rs  device.rs  future.rs  kernel.rs  lib.rs
src/.krnl/src/kernel.rs/axpy/: invocation.rs  lib.rs  module.bincode
src/buffer/kernels/: .krnl.module.rs
src/device/: engine.rs  vulkan_engine.rs  wgpu_engine.rs
src/kernel/__private/: metadata.rs
tests/: integration_tests.rs  kernel_module.rs
tests/kernel-tests/: Cargo.toml  krnl-cache.rs
tests/kernel-tests/src/: lib.rs
tests/krnlc-tests/: Cargo.toml  build.rs  krnl-cache.rs
tests/krnlc-tests/src/: lib.rs
tests/krnlc-tests/test-dependency/: Cargo.toml
tests/krnlc-tests/test-dependency/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: charts.rs  main.rs  plot.rs
