[workspace]
members = ["crates/krnl", "crates/krnl-core", "crates/krnl-macros", "benchmarks/*", "tests/*", "xtask"]
default-members = ["crates/krnl"]

[workspace.package]
version = "0.0.1-unstable"
authors = ["Charles R Earp <charles.r.earp@gmail.com>"]
edition = "2021"
homepage = "https://github.com/charles-r-earp/krnl"
keywords = ["kernel", "compute", "vulkan", "gpu"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/charles-r-earp/krnl"

[workspace.dependencies]
serde = { version = "1.0.143", default-features = false, features = ["derive"] }
dry = "0.1.1"
paste = "1.0.7"
derive_more = { version = "0.99.11", default-features = false }
anyhow = "1.0.60"
half = { version = "2.1.0", default-features = false, features = ["num-traits", "serde"] }
num-traits = { version = "0.2.14", default-features = false }
thiserror = "1.0.31"
bincode2 = "2.0.1"
rspirv = "0.11.0"
flate2 = "1.0.25"
hex = "0.4.3"
rustversion = "1.0.12"
clap = { version = "4.0.22", features = ["derive"] }
fxhash = "0.2.1"