[package]
name = "krnl-builder"
version = "0.0.1"
authors = ["Charles R Earp <charles.r.earp@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.61"
krnl-core = { path = "../krnl-core" }
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu/" }
bincode = "1.3.3"
serde = { version = "1.0.143", default-features = false, features = ["derive"] }
