[package]
name = "krnl-builder"
version = "0.0.1"
authors = ["Charles R Earp <charles.r.earp@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.61"
krnl-types = { path = "../krnl-types" }
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu/" }
bincode = "1.3.3"
spirv = "0.2.0"
bytemuck = "1.12.1"
