[package]
name = "krnl-core"
version = "0.0.1"
authors = ["Charles R Earp <charles.r.earp@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
krnl-macros = { path = "../krnl-macros" }
spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu", rev = "9e2e66729d440fdbf53ce21d173b683240aa2805" }
glam = { version = "0.21.3", default-features = false, features = ["libm"] }


[target."cfg(not(target_arch = \"spirv\"))".dependencies]
num-traits = "0.2.14"
half = { git = "https://github.com/starkat99/half-rs", features = ["num-traits", "bytemuck", "serde"], optional = true }
bytemuck = "1.4.1"
serde = { version = "1.0.143", features = ["derive"] }
thiserror = "1.0.32"
derive_more = { version = "0.99.11", default-features = false, features = ["display", "is_variant"] }

[target."cfg(target_arch = \"spirv\")".dependencies]
num-traits = { version = "0.2.14", default-features = false }
half = { git = "https://github.com/starkat99/half-rs", default-features = false, features = ["num-traits", "bytemuck"], optional = true }

[features]
half = ["dep:half"]
