[package]
name = "krnl-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Core library for krnl."
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
autobins = false 
autoexamples = false
autotests = false
autobenches = false

[dependencies]
krnl-macros.workspace = true
spirv-std =  "=0.9.0"
paste.workspace = true
dry.workspace = true

[target.'cfg(not(target_arch = "spirv"))'.dependencies]
num-traits.workspace = true
half = { workspace = true, features = ["bytemuck"] }
bytemuck.workspace = true
serde = { version = "1.0.143", features = ["derive"], optional = true }
thiserror = "1.0.32"
derive_more = { version = "0.99.11", default-features = false, features = ["display", "is_variant"] }
paste.workspace = true

[target.'cfg(target_arch = "spirv")'.dependencies]
num-traits = { workspace = true, default-features = false, features = ["libm"] }
half.workspace = true

[features]
serde = ["dep:serde", "half/serde"]

[package.metadata.docs.rs]
all-features = true