[package]
name = "krnl-macros"
version = "0.0.1"
authors = ["Charles R Earp <charles.r.earp@gmail.com>"]
edition = "2021"
publish = false

[lib]
proc-macro = true

[dependencies]
krnl-core = { path = "../krnl-core" }
syn = { version = "1.0.33", features = ["full"] }
quote = "1.0.7"
#proc-macro2 = "1.0.18"
#derive-syn-parse = "0.1.5"
#parking_lot = "0.12.1"
bincode = "1.3.3"
serde = { version = "1.0.143", default-features = false, features = ["derive"] }
