[package]
name = "krnl-macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Macros for krnl."
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
autobins = false
autoexamples = false
autobenches = false

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.33", features = ["full", "extra-traits"] }
quote = "1.0.7"
proc-macro2 = "1.0.18"
derive-syn-parse = "0.1.5"
bincode2.workspace = true
flate2.workspace = true
hex.workspace = true
prettyplease = "0.1.21"
serde = { workspace = true, default-features = false, features = ["derive"] }
derive_more = { workspace = true, default-features = false, features = [
    "is_variant",
] }
rustversion.workspace = true
fxhash.workspace = true
semver = "1.0.17"
zero85 = "0.2.0"
bytemuck.workspace = true
itertools.workspace = true
