[package]
name = "krnl-types"
version = "0.0.1"
edition = "2021"
publish = false


[target."cfg(not(target_arch = \"spirv\"))".dependencies]
num-traits = "0.2.14"
half = { git = "https://github.com/starkat99/half-rs", features = ["num-traits"], optional = true }
bytemuck = "1.4.1"
spirv = { version = "0.2.0", features = ["serialize", "deserialize"] }
serde = { version = "1.0.143", features = ["derive", "rc"] }
thiserror = "1.0.32"
derive_more = { version = "0.99.11", default-features = false, features = ["display"] }

[target."cfg(target_arch = \"spirv\")".dependencies]
num-traits = { version = "0.2.14", default-features = false }
half = { git = "https://github.com/starkat99/half-rs", default-features = false, features = ["num-traits"], optional = true }

[features]
half = ["dep:half"]
