[package]
name = "krnlc"
version = "0.0.1"
edition = "2021"
publish = false

[workspace]

[dependencies]
clap = { version = "4.0.22", features = ["derive"] }
clap-cargo = { version = "0.10.0", features = ["cargo_metadata"] }
anyhow = "1.0.60"
syn = { version = "1.0.103", features = ["full", "visit", "extra-traits"] }
quote = "1.0.21"
bytemuck = "1.12.3"
cargo_metadata = "0.15.1"
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu", tag = "v0.4.0-alpha.17" }
bincode = "1.3.3"
prettyplease = "0.1.21"
symlink = "0.1.0"
rspirv = "0.11.0"
spirv-tools = "0.9.0"
proc-macro2 = "1.0.47"
