[workspace]

[package]
name = "krnlc"
version = "0.0.4"
authors = ["Charles R Earp <charles-r-earp@gmail.com>"]
edition = "2021"
description = "Kernel compiler for krnl."
documentation = "https://docs.rs/krnl"
readme = "../README.md"
homepage = "https://github.com/charles-r-earp/krnl"
license = "MIT OR Apache-2.0"
publish = true
autoexamples = false
autotests = false
autobenches = false

[build-dependencies]
rustversion = "1.0.12"
vergen = { version = "8.2.6", features = ["git", "gitcl"] }

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
clap-cargo = { version = "0.13.0", features = ["cargo_metadata"] }
anyhow = "1.0.60"
syn = { version = "1.0.103", features = ["full", "visit", "extra-traits"] }
cargo_metadata = "0.18.1"
spirv-builder = { version = "=0.9.0", default-features = false }
serde = { version = "1.0.143", default-features = false, features = ["derive"] }
bincode2 = "2.0.1"
symlink = "0.1.0"
rspirv = "0.11.0"
spirv-tools = { version = "0.9.0", default-features = false }
itertools = "0.10.5"
rayon = "1.7.0"
flate2 = "1.0.25"
hex = "0.4.3"
fxhash = "0.2.1"
semver = "1.0.17"
serde_json = "1.0.96"
bytemuck = "1.13.1"
prettyplease = "0.1.25"
walkdir = "2.4.0"
zero85 = "0.2.0"

[features]
default = ["use-compiled-tools"]
use-compiled-tools = ["spirv-builder/use-compiled-tools", "spirv-tools/use-compiled-tools"]
use-installed-tools = ["spirv-builder/use-installed-tools", "spirv-builder/use-installed-tools"]
