[package]
name = "compute-benches"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false
autobins = false 
autoexamples = false
autotests = false
autobenches = false

[dependencies]
approx = "0.5.1"
anyhow.workspace = true
criterion = { version = "0.4.0", default-features = false, features = ["plotters"] }
cust = { version = "0.3.2", optional = true }
futures = { version = "0.1", optional = true }
krnl = { workspace = true, default-features = false }
ocl = { version = "0.19.4", optional = true }
qutex = { version = "=0.2.3", optional = true }
rand = "0.8.5"
# added upload without alloc
# this doesn't improve upload perf though
autograph = { git = "https://github.com/charles-r-earp/autograph", branch = "krnl-bench-ext", optional = true }
blocker = { version = "0.1.2", features = ["thread_yield"], optional = true }

[features]
default = ["device"]
device = ["krnl/device"]
autograph = ["dep:autograph", "dep:blocker"]
cuda = ["dep:cust"]
ocl = ["dep:ocl", "dep:futures", "dep:qutex"]

[build-dependencies]
anyhow.workspace = true

[[bench]]
name = "benchmarks"
harness = false
required-features = ["device"]
