[package]
name = "compute-benches"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false
autobins = false 
autoexamples = false
autotests = false
autobenches = false

[dependencies]
approx = "0.5.1"
anyhow.workspace = true
criterion = { version = "0.4.0", default-features = false }
cust = { version = "0.3.2", optional = true }
futures = { version = "0.1", optional = true }
krnl = { workspace = true, default-features = false }
ocl = { version = "0.19.4", optional = true }
qutex = { version = "=0.2.3", optional = true }
rand = "0.8.5"

[features]
default = ["device"]
device = ["krnl/device"]
cuda = ["dep:cust"]
ocl = ["dep:ocl", "dep:futures", "dep:qutex"]

[build-dependencies]
anyhow.workspace = true

[[bench]]
name = "benchmarks"
harness = false
required-features = ["device"]

[dev-dependencies]
num-format = "0.4.4"
