[package]
name = "krnl-macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
publish = false

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.33", features = ["full", "extra-traits"] }
quote = "1.0.7"
proc-macro2 = "1.0.18"
derive-syn-parse = "0.1.5"
#bincode = "1.3.3"
#siphasher = "0.3.10"
prettyplease = "0.1.21"
#serde = { version = "1.0.143", default-features = false, features = ["derive"] }


#spirv = { version = "0.2.0", features = ["serialize", "deserialize"] }
#once_cell = { version = "1.14.0", default-features = false, features = ["std"] }
#parking_lot = "0.12.1"
