
[package]
name = "krnl"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
publish = false
autobins = false 
autoexamples = false
autotests = false
autobenches = false

[dependencies]
krnl-macros = { path = "../krnl-macros" }
krnl-core = { path = "../krnl-core" }
vulkano = { git = "https://github.com/vulkano-rs/vulkano", branch = "0.32.X", optional = true }
serde = { workspace = true, default-features = false, features = ["derive", "rc"] }
anyhow.workspace = true
half = { workspace = true, features = ["std"] }
num-traits = { workspace = true, features = ["std"] }
paste.workspace = true 
dry.workspace = true
derive_more.workspace = true
thiserror.workspace = true
parking_lot = "0.12.1"
once_cell = { version = "1.13.0", default-features = false, features = ["std", "alloc"] }
bytemuck = { version = "1.11.0", default-features = false }
bincode2.workspace = true
flate2.workspace = true
dashmap = { version = "5.3.4", optional = true }
rspirv = { workspace = true, optional = true }

ash = { version = "0.37.1", optional = true, features = ["linked"] }
atomicbox = { version = "0.4.0", optional = true }

[target."cfg(any(target_os = \"ios\", target_os = \"macos\"))".dependencies]
ash-molten = { version = "0.13.1", features = ["pre-built"], optional = true }

[features]
device = ["dep:vulkano", "dep:ash", "dep:ash-molten", "dep:dashmap", "dep:rspirv", "dep:atomicbox"]

[package.metadata.krnlc]
features = ["device"]

[package.metadata.krnlc.dependencies]
dry = {}
paste = {}

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
harness = false

[dev-dependencies]
libtest-mimic = "0.6.0"
