[package]
name = "krnlc"
version = "0.0.1"
edition = "2021"
publish = false

[workspace]

[dependencies]
clap = { version = "4.0.22", features = ["derive"] }
clap-cargo = { version = "0.10.0", features = ["cargo_metadata"] }
anyhow = "1.0.60"
syn = { version = "1.0.103", features = ["full", "visit", "extra-traits"] }
cargo_metadata = "0.15.1"
spirv-builder = { version = "0.6.0", default-features = false }
serde = { version = "1.0.143", default-features = false, features = ["derive"] }
bincode = "1.3.3"
prettyplease = "0.1.21"
symlink = "0.1.0"
rspirv = "0.11.0"
spirv-tools = { version = "0.9.0", default-features = false }
itertools = "0.10.5"
ctrlc = { version = "3.2.5", features = ["termination"] }

[features]
default = ["use-installed-tools"]
use-compiled-tools = ["spirv-builder/use-compiled-tools", "spirv-tools/use-compiled-tools"]
use-installed-tools = ["spirv-builder/use-installed-tools", "spirv-builder/use-installed-tools"]
