[package]
name = "krnlc"
version = "0.0.1-unstable"
authors = ["Charles R Earp <charles-r-earp@gmail.com>"]
description = "Compiler for krnl modules."
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false
autoexamples = false
autotests = false
autobenches = false

[workspace]

[dependencies]
clap = { version = "4.0.22", features = ["derive"] }
clap-cargo = { version = "0.10.0", features = ["cargo_metadata"] }
anyhow = "1.0.60"
syn = { version = "1.0.103", features = ["full", "visit", "extra-traits"] }
cargo_metadata = "0.15.1"
spirv-builder = { version = "=0.6.0", default-features = false }
serde = { version = "1.0.143", default-features = false, features = ["derive"] }
bincode2 = "2.0.1"
prettyplease = "0.1.21"
symlink = "0.1.0"
rspirv = "0.11.0"
spirv-tools = { version = "0.9.0", default-features = false }
itertools = "0.10.5"
rayon = "1.7.0"
flate2 = "1.0.25"
hex = "0.4.3"
fxhash = "0.2.1"

[features]
default = ["use-compiled-tools"]
use-compiled-tools = ["spirv-builder/use-compiled-tools", "spirv-tools/use-compiled-tools"]
use-installed-tools = ["spirv-builder/use-installed-tools", "spirv-builder/use-installed-tools"]
