[package]
name = "builder"
version = "0.1.0"
authors = ["Charles R Earp <charles.r.earp@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu", rev = "9e2e66729d440fdbf53ce21d173b683240aa2805" }
bincode = "1.3.3"
serde = { version = "1.0.143", default-features = false, features = ["derive"] }
spirv = { version = "0.2.0", features = ["serialize", "deserialize"] }
#bytemuck = "1.4.1"
rspirv = "0.11.0"
spirv-tools = "0.8.0"
