[package]
name = "krnlc-tests"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
krnl = { path = "../../crates/krnl", default-features = false }
paste.workspace = true
dry.workspace = true

[features]
krnlc = []

[package.metadata.krnlc.dependencies]
paste = {}
dry = {}