[package]
name = "krnlc-tests"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
krnl = { workspace = true, default-features = false }
paste.workspace = true
dry.workspace = true

[package.metadata.krnlc.dependencies]
paste = {}
dry = {}
test-dependency = { path = "test-dependency" }