[package]
name = "test-builder"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.52"
bytemuck = "1.11.0"
rspirv = "0.11.0"
spirv_cross = { version = "0.23.1", features = ["glsl"], default-features = false }
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu" }
