[package]
name = "krnlc-test"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
glam = "0.22.0"
krnl = { path = "../../../", features = ["device"] }

[package.metadata.krnlc]
# features = ["foo"] 

[package.metadata.krnlc.dependencies]
glam = { default-features = false, features = ["libm"] }
